--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </header> -->
     <main>
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container">
           <h1 class="hero__title">
             Эффективные решения <br />для вашего бизнеса
@@ -60,7 +60,7 @@
             Заказать услугу
           </button>
         </div>
-      </section> -->
+      </section>
       <section class="desc">
         <div class="container">
           <h2 class="visually-hidden">Описание</h2>
