--- a/index.html
+++ b/index.html
@@ -14,22 +14,31 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="stylesheet" href="./css/main.min.css" />
     <title>WebStudio</title>
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container">
         <a href="" class="logo link"
-          >Web<span class="logo__text">Studio</span></a
-        >
+          >Web<span class="logo__text">Studio</span>
+        </a>
+        <button type="button" class="menu-open-btn">
+          <svg class="menu-icon" width="40" height="40">
+            <use href="./images/icons.svg#icon-menu-open"></use>
+          </svg>
+        </button>
         <nav class="navigation">
           <ul class="navigation-list list">
             <li class="navigation-list__item">
-              <a href="./index.html" class="navigation-list__link link current">Студия</a>
+              <a href="./index.html" class="navigation-list__link link current"
+                >Студия</a
+              >
             </li>
             <li class="navigation-list__item">
-              <a href="./portfolio.html" class="navigation-list__link link">Портфолио</a>
+              <a href="./portfolio.html" class="navigation-list__link link"
+                >Портфолио</a
+              >
             </li>
             <li class="navigation-list__item">
               <a href="" class="navigation-list__link link">Контакты</a>
@@ -38,18 +47,80 @@
         </nav>
         <div class="contacts-wrap">
           <a href="mailto:info@devstudio.com" class="contacts link">
-            <svg class="contacts__icon" width="16" height="12">
+            <svg
+              class="contacts__icon contacts-phone-icon"
+              width="16"
+              height="12"
+            >
               <use href="./images/icons.svg#icon-envelope-hover"></use></svg
             >info@devstudio.com</a
           >
           <a href="tell:+380961111111" class="contacts link">
-            <svg class="contacts__icon" width="10" height="16">
+            <svg
+              class="contacts__icon contacts-mail-icon"
+              width="10"
+              height="16"
+            >
               <use href="./images/icons.svg#icon-smartphone"></use></svg
             >+38 096 111 11 11</a
           >
         </div>
       </div>
-    </header> -->
+      <div class="mob-menu visually-hidden">
+        <div class="container">
+          <button type="button" class="menu-close-btn">
+            <svg class="menu-icon" width="40" height="40">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <ul class="mob-navigation-list list">
+            <li class="mob-navigation-list__item">
+              <a
+                href="./index.html"
+                class="mob-navigation-list__link link mob-current"
+                >Студия</a
+              >
+            </li>
+            <li class="mob-navigation-list__item">
+              <a href="./portfolio.html" class="mob-navigation-list__link link"
+                >Портфолио</a
+              >
+            </li>
+            <li class="mob-navigation-list__item">
+              <a href="" class="mob-navigation-list__link link">Контакты</a>
+            </li>
+          </ul>
+          <div class="mob-contacts-wrap">
+            <ul class="mob-contacts-list list">
+              <li class="mob-contacts-item">
+                <a href="tell:+380961111111" class="mob-contacts link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+              <li class="mob-contacts-item">
+                <a href="mailto:info@devstudio.com" class="mob-contacts link"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="mob-soc-list list">
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">Instagram</a>
+              </li>
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">Twitter</a>
+              </li>
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">Facebook</a>
+              </li>
+              <li class="mob-soc-item">
+                <a href="" class="mob-soc-link link">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
     <main>
       <section class="hero">
         <div class="container">
@@ -77,7 +148,7 @@
                 формированию позиции.
               </p>
             </li>
-            <li class= "desc-list__item">
+            <li class="desc-list__item">
               <div class="icon-wrap">
                 <svg class="desc-list__icon" width="70" height="70">
                   <use href="./images/icons.svg#icon-clock"></use>
@@ -125,18 +196,19 @@
                 <p class="features-txt">Десктопные приложения</p>
               </div>
               <img
+                srcset="./images/box_1.jpg 1x, ./images/box_1-2x.jpg 2x"
                 src="./images/box_1.jpg"
                 alt="написание кода"
                 width="370"
                 height="294"
               />
-              
             </li>
             <li class="features-item">
               <div class="features-wrap">
                 <p class="features-txt">Мобильные приложения</p>
               </div>
               <img
+                srcset="./images/box_2.jpg 1x, ./images/box_2-2x.jpg 2x"
                 src="./images/box_2.jpg"
                 alt="планирование"
                 width="370"
@@ -148,6 +220,7 @@
                 <p class="features-txt">Дизайнерские решения</p>
               </div>
               <img
+                srcset="./images/box_3.jpg 1x, ./images/box_3-2x.jpg 2x"
                 src="./images/box_3.jpg"
                 alt="дизайн"
                 width="370"
@@ -162,12 +235,32 @@
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list list">
             <li class="team-list-item">
-              <img
-                src="./images/team_4.jpg"
-                alt="Игорь Демьяненко"
-                width="270"
-                class="team-img"
-              />
+              <picture>
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/team_4-mob.jpg    1x,
+                    ./images/team_4-mob-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px) and (max-width: 1199px)"
+                  srcset="
+                    ./images/team_4-tab.jpg    1x,
+                    ./images/team_4-tab-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/team_4.jpg 1x, ./images/team_4-2x.jpg 2x"
+                />
+                <img
+                  src="./images/team_4.jpg"
+                  alt="Игорь Демьяненко"
+                  width="270"
+                  class="team-img"
+                />
+              </picture>
               <div class="team-list-desc">
                 <h3 class="team-name">Игорь Демьяненко</h3>
                 <p lang="en" class="team-desc">Product Designer</p>
@@ -206,12 +299,33 @@
               </div>
             </li>
             <li class="team-list-item">
-              <img
-                src="./images/team_1.jpg"
-                alt="Ольга Репина "
-                width="270"
-                class="team-img"
-              />
+              <picture>
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/team_1-mob.jpg    1x,
+                    ./images/team_1-mob-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px) and (max-width: 1199px)"
+                  srcset="
+                    ./images/team_1-tab.jpg    1x,
+                    ./images/team_1-tab-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/team_1.jpg 1x, ./images/team_1-2x.jpg 2x"
+                />
+                <img
+                  src="./images/team_1.jpg"
+                  alt="Ольга Репина "
+                  width="270"
+                  class="team-img"
+                />
+              </picture>
+
               <div class="team-list-desc">
                 <h3 class="team-name">Ольга Репина</h3>
                 <p lang="en" class="team-desc">Frontend Developer</p>
@@ -250,12 +364,33 @@
               </div>
             </li>
             <li class="team-list-item">
-              <img
-                src="./images/team_2.jpg"
-                alt="Николай Тарасов"
-                width="270"
-                class="team-img"
-              />
+              <picture>
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/team_2-mob.jpg    1x,
+                    ./images/team_2-mob-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px) and (max-width: 1199px)"
+                  srcset="
+                    ./images/team_2-tab.jpg    1x,
+                    ./images/team_2-tab-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/team_2.jpg 1x, ./images/team_2-2x.jpg 2x"
+                />
+                <img
+                  src="./images/team_2.jpg"
+                  alt="Николай Тарасов"
+                  width="270"
+                  class="team-img"
+                />
+              </picture>
+
               <div class="team-list-desc">
                 <h3 class="team-name">Николай Тарасов</h3>
                 <p lang="en" class="team-desc">Marketing</p>
@@ -294,12 +429,33 @@
               </div>
             </li>
             <li class="team-list-item">
-              <img
-                src="./images/team_3.jpg"
-                alt="Михаил Ермаков"
-                width="270"
-                class="team-img"
-              />
+              <picture>
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/team_3-mob.jpg    1x,
+                    ./images/team_3-mob-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px) and (max-width: 1199px)"
+                  srcset="
+                    ./images/team_3-tab.jpg    1x,
+                    ./images/team_3-tab-2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/team_3.jpg 1x, ./images/team_3-2x.jpg 2x"
+                />
+                <img
+                  src="./images/team_3.jpg"
+                  alt="Михаил Ермаков"
+                  width="270"
+                  class="team-img"
+                />
+              </picture>
+
               <div class="team-list-desc">
                 <h3 class="team-name">Михаил Ермаков</h3>
                 <p lang="en" class="team-desc">UI Designer</p>
@@ -392,8 +548,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="footer-tablet-wrap">
-          <div class="footer-address-wrap">
+        <div class="footer-address-wrap">
           <a href="" class="logo link"
             >Web<span class="footer-logo">Studio</span></a
           >
@@ -420,8 +575,8 @@
               </li>
             </ul>
           </address>
-          </div>
-          <div class="footer-join">
+        </div>
+        <div class="footer-join">
           <h2 class="footer-title">присоединяйтесь</h2>
           <ul class="footer-socials-list list">
             <li class="footer-socials-item">
@@ -453,8 +608,7 @@
               </a>
             </li>
           </ul>
-          </div>
-      </div>
+        </div>
         <div class="footer-subscribe">
           <label for="footer-email" class="footer-email-title"
             >Подпишитесь на рассылку</label
@@ -559,7 +713,8 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              Соглашаюсь с рассылкой и принимаю &nbsp;<a href="#" class="policy-link">Условия договора</a></label
+              Соглашаюсь с рассылкой и принимаю
+              <a href="#" class="policy-link">Условия договора</a></label
             >
           </div>
           <button type="submit" class="modal-submit">Отправить</button>
@@ -567,5 +722,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
