--- a/index.html
+++ b/index.html
@@ -630,6 +630,9 @@
           </div>
         </div>
       </div>
+      <svg class="test" width="20" height="20">
+        <use href="./images/icons.svg#icon-facebook-red"></use>
+      </svg>
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
